# broadcastx

./: .gitignore  README.md  README_ZH.md  pyproject.toml
.github/workflows/: publish.yml
broadcastx/: __init__.py  cli.py  config.py  downloader.py  hls.py  id3.py  models.py  monitor.py  pause_detector.py  rotation.py  scanner.py  scrape_broadcasts.py  video_rotation.py  watermark.py
broadcastx/js/: extract.js  fetch_page.js  search_extract.js  search_page.js
tests/: test_broadcast_url_validation.py  test_downloader_rotation.py  test_monitor_auth.py  test_rotation_sidecar.py  test_watermark.py
