[project]
name = "broadcastx"
version = "0.1.0"
description = "Discover and download X/Twitter broadcast videos from user timelines"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40",
    "rich>=13.0",
    "click>=8.0",
    "httpx>=0.27",
    "twscrape>=0.18",
]

[project.scripts]
broadcastx = "broadcastx.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["broadcastx*"]
