[project]
name = "broadcastx"
version = "0.1.1"
description = "Discover and download X/Twitter broadcast videos from user timelines"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40",
    "rich>=13.0",
    "click>=8.0",
    "httpx>=0.27",
    "twscrape>=0.18",
]

[project.scripts]
broadcastx = "broadcastx.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["broadcastx"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
